Starter HTML & CSS

--- a/index.html
+++ b/index.html
@@ -8,5 +8,32 @@
     <script defer src="script.js" type="module"></script>
     <title>TinDoG</title>
   </head>
-  <body></body>
+  <body>
+    <div class="app-container">
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="images/icon-profile.png"
+            alt="User's profile picture"
+            class="nav-item"
+          />
+          <img src="images/logo.png" alt="Logo" class="nav-item" />
+          <img src="images/icon-chat.png" alt="Chat icon" class="nav-item" />
+        </nav>
+      </header>
+
+      <section class="main-content">
+        <img
+          src="images/dog-teddy.jpg"
+          alt="Teddy, a dog looking cool."
+          class="main-image"
+        />
+      </section>
+
+      <section class="CTA-btns-container">
+        <img src="images/icon-cross.png" alt="Cross icon" class="cta-btn" />
+        <img src="images/icon-heart.png" alt="Heart icon" class="cta-btn" />
+      </section>
+    </div>
+  </body>
 </html>
