Styling the app

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js" type="module"></script>
     <title>TinDoG</title>
@@ -17,17 +25,14 @@
             alt="User's profile picture"
             class="nav-item"
           />
-          <img src="images/logo.png" alt="Logo" class="nav-item" />
+          <img src="images/logo.png" alt="Logo" class="nav-item logo" />
           <img src="images/icon-chat.png" alt="Chat icon" class="nav-item" />
         </nav>
       </header>
 
       <section class="main-content">
-        <img
-          src="images/dog-teddy.jpg"
-          alt="Teddy, a dog looking cool."
-          class="main-image"
-        />
+        <p class="dog-name">Teddy, 30</p>
+        <p class="dog-message">How you doin?</p>
       </section>
 
       <section class="CTA-btns-container">
