--- a/index.html
+++ b/index.html
@@ -33,11 +33,26 @@
       <section class="main-content">
         <p class="dog-name">Teddy, 30</p>
         <p class="dog-message">How you doin?</p>
+
+        <img
+          src="images/badge-like.png"
+          alt="Liked badge"
+          class="badge badge-like"
+        />
+        <img
+          src="images/badge-nope.png"
+          alt="Liked badge"
+          class="badge badge-nope"
+        />
       </section>
 
       <section class="CTA-btns-container">
-        <img src="images/icon-cross.png" alt="Cross icon" class="cta-btn" />
-        <img src="images/icon-heart.png" alt="Heart icon" class="cta-btn" />
+        <div class="CTA-btns-white-bg cross-icon-bg">
+          <img src="images/icon-cross.png" alt="Cross icon" class="cta-btn" />
+        </div>
+        <div class="CTA-btns-white-bg heart-icon-bg">
+          <img src="images/icon-heart.png" alt="Heart icon" class="cta-btn" />
+        </div>
       </section>
     </div>
   </body>
